# metis

./: CMakeLists.txt  conanbuildinfo.cmake  conanfile.txt
GKlib/: CMakeLists.txt  GKlibSystem.cmake
libmetis/: CMakeLists.txt  metislib.h
programs/: metisbin.h
